possibility to run with JDK17 with --add-opens and remove frgaal